gitops/01-core/vault/vault-private-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-private
  namespace: vault
spec:
  parentRefs:
    - name: private
      namespace: istio-system
      sectionName: https
  hostnames:
    - "vault.mmonteiro.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault-ui
          port: 8200
